[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/gui/box-patch.png" type="Texture" id=1]
[ext_resource path="res://materials/theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/gui/Pause.gd" type="Script" id=3]
[ext_resource path="res://assets/gui/menu-party.png" type="Texture" id=4]
[ext_resource path="res://scenes/gui/HPBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/gui/MenuMore.gd" type="Script" id=6]
[ext_resource path="res://materials/HP-FONT-thin.tres" type="BitmapFont" id=7]
[ext_resource path="res://assets/characters/dummy.png" type="Texture" id=8]
[ext_resource path="res://assets/item-icon/item-icon3.png" type="Texture" id=9]
[ext_resource path="res://assets/item-icon/item-icon4.png" type="Texture" id=10]
[ext_resource path="res://assets/item-icon/item-icon8.png" type="Texture" id=11]
[ext_resource path="res://scripts/gui/MenuMember.gd" type="Script" id=12]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 25, 34 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MenuMore:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 104, 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuMore:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 122, 106 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MenuSmall:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 6 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MenuSmall:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 61, 61 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MenuMember:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 130, 110 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MenuMember:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 50, 12 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "menumember_open"
length = 0.45
tracks/0/type = "value"
tracks/0/path = NodePath("MenuMember:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 17, 16 ), Vector2( 130, 110 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuMember:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 100 ), Vector2( 50, 12 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("MenuMember")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "menumore_open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MenuMore:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 219.613, 110.22 ), Vector2( 104, 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuMore:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 17, 16 ), Vector2( 122, 106 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("MenuMore")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "menusmall_open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MenuSmall:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 37.6198, 48.0024 ), Vector2( 6, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuSmall:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 17, 16 ), Vector2( 61, 61 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("MenuSmall")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
} ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -360.0
margin_bottom = -240.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
input_pass_on_modal_close_click = false
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSmall" type="NinePatchRect" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 67.0
margin_bottom = 67.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 24, 24 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 9
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuSmall"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 5.0
margin_right = 37.0
margin_bottom = 45.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Button" parent="MenuSmall/VBoxContainer"]
margin_right = 91.0
margin_bottom = 16.0
text = "gameItems"
flat = true
align = 0

[node name="Party" type="Button" parent="MenuSmall/VBoxContainer"]
margin_top = 20.0
margin_right = 91.0
margin_bottom = 36.0
text = "gameParty"
flat = true
align = 0

[node name="Skills" type="Button" parent="MenuSmall/VBoxContainer"]
margin_top = 40.0
margin_right = 91.0
margin_bottom = 56.0
text = "gameSkill"
flat = true
align = 0

[node name="Quit" type="Button" parent="MenuSmall/VBoxContainer"]
margin_top = 60.0
margin_right = 91.0
margin_bottom = 76.0
text = "menuQuit"
flat = true
align = 0

[node name="MenuMore" type="NinePatchRect" parent="."]
margin_left = 104.0
margin_top = 18.0
margin_right = 226.0
margin_bottom = 124.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 24, 24 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 9
patch_margin_bottom = 8
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuMore"]
visible = false
margin_left = 15.0
margin_top = -7.0
margin_right = 228.0
margin_bottom = 9.0
rect_scale = Vector2( 0.5, 0.5 )
text = "gameWhose"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuMore"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 7.0
margin_right = -7.0
margin_bottom = -6.0
rect_clip_content = true
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuMember" type="NinePatchRect" parent="."]
margin_left = 50.0
margin_top = 12.0
margin_right = 180.0
margin_bottom = 122.0
rect_scale = Vector2( 2, 2 )
rect_clip_content = true
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 24, 24 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 9
patch_margin_bottom = 8
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuMember"]
margin_left = 6.0
margin_top = 6.0
margin_right = 124.0
margin_bottom = 94.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MenuMember/VBoxContainer"]
margin_right = 118.0
margin_bottom = 34.0
mouse_filter = 2
texture = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="MenuMember/VBoxContainer/TextureRect"]
anchor_top = 0.135
anchor_bottom = 0.135
margin_left = 16.9306
margin_top = -3.49594
margin_right = 26.9306
margin_bottom = 3.50406
custom_fonts/font = ExtResource( 7 )
text = "99"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" parent="MenuMember/VBoxContainer/TextureRect" instance=ExtResource( 5 )]
margin_left = 45.0
margin_top = 12.0
margin_right = 107.0
margin_bottom = 19.0
type = "Health"

[node name="DEFBar" parent="MenuMember/VBoxContainer/TextureRect" instance=ExtResource( 5 )]
margin_left = 36.0
margin_top = 22.2993
margin_right = 98.0
margin_bottom = 29.2993
type = "Defense"

[node name="Name" type="Label" parent="MenuMember/VBoxContainer/TextureRect"]
margin_left = 33.0
margin_top = 1.09406
margin_right = 73.0
margin_bottom = 17.0941
rect_scale = Vector2( 0.5, 0.5 )
text = "Kevin"

[node name="XP" type="Label" parent="MenuMember/VBoxContainer/TextureRect"]
margin_left = 54.0
margin_top = 1.0
margin_right = 173.0
margin_bottom = 17.0
rect_scale = Vector2( 0.5, 0.5 )
text = "EXP: 9999 / 9999"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuMember/VBoxContainer"]
margin_top = 38.0
margin_right = 118.0
margin_bottom = 38.0

[node name="PanelStats" type="Panel" parent="MenuMember/VBoxContainer/HBoxContainer"]
margin_right = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Aligner" type="HBoxContainer" parent="MenuMember/VBoxContainer/HBoxContainer/PanelStats"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="VBoxContainer" parent="MenuMember/VBoxContainer/HBoxContainer/PanelStats/Aligner"]
margin_right = 67.0
margin_bottom = 96.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xMANA" type="Label" parent="MenuMember/VBoxContainer/HBoxContainer/PanelStats/Aligner/Labels"]
margin_right = 67.0
margin_bottom = 16.0
text = "statxMANA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EVA" type="Label" parent="MenuMember/VBoxContainer/HBoxContainer/PanelStats/Aligner/Labels"]
margin_top = 20.0
margin_right = 67.0
margin_bottom = 36.0
text = "statEVA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ATK" type="Label" parent="MenuMember/VBoxContainer/HBoxContainer/PanelStats/Aligner/Labels"]
margin_top = 40.0
margin_right = 67.0
margin_bottom = 56.0
text = "statATK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DEF" type="Label" parent="MenuMember/VBoxContainer/HBoxContainer/PanelStats/Aligner/Labels"]
margin_top = 60.0
margin_right = 67.0
margin_bottom = 76.0
text = "statDEF"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LUC" type="Label" parent="MenuMember/VBoxContainer/HBoxContainer/PanelStats/Aligner/Labels"]
margin_top = 80.0
margin_right = 67.0
margin_bottom = 96.0
text = "statLUC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Values" type="VBoxContainer" parent="MenuMember/VBoxContainer/HBoxContainer/PanelStats/Aligner"]
margin_left = 71.0
margin_right = 97.0
margin_bottom = 96.0

[node name="xMANA" type="Label" parent="MenuMember/VBoxContainer/HBoxContainer/PanelStats/Aligner/Values"]
margin_right = 26.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.556863, 0.690196, 1, 1 )
text = "99+1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EVA" type="Label" parent="MenuMember/VBoxContainer/HBoxContainer/PanelStats/Aligner/Values"]
margin_top = 20.0
margin_right = 26.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.556863, 0.690196, 1, 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ATK" type="Label" parent="MenuMember/VBoxContainer/HBoxContainer/PanelStats/Aligner/Values"]
margin_top = 40.0
margin_right = 26.0
margin_bottom = 56.0
custom_colors/font_color = Color( 0.556863, 0.690196, 1, 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DEF" type="Label" parent="MenuMember/VBoxContainer/HBoxContainer/PanelStats/Aligner/Values"]
margin_top = 60.0
margin_right = 26.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0.556863, 0.690196, 1, 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LUC" type="Label" parent="MenuMember/VBoxContainer/HBoxContainer/PanelStats/Aligner/Values"]
margin_top = 80.0
margin_right = 26.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0.556863, 0.690196, 1, 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equip" type="Panel" parent="MenuMember/VBoxContainer/HBoxContainer"]
margin_left = 61.0
margin_right = 118.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="MenuMember/VBoxContainer/HBoxContainer/Equip"]
margin_right = 69.0
margin_bottom = 56.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Helm" type="Button" parent="MenuMember/VBoxContainer/HBoxContainer/Equip/Buttons"]
margin_right = 69.0
margin_bottom = 16.0
text = "Helm"
icon = ExtResource( 9 )

[node name="Armor" type="Button" parent="MenuMember/VBoxContainer/HBoxContainer/Equip/Buttons"]
margin_top = 20.0
margin_right = 69.0
margin_bottom = 36.0
text = "Armor"
icon = ExtResource( 10 )

[node name="Charm" type="Button" parent="MenuMember/VBoxContainer/HBoxContainer/Equip/Buttons"]
margin_top = 40.0
margin_right = 69.0
margin_bottom = 56.0
text = "Charm"
icon = ExtResource( 11 )

[node name="Card" type="VBoxContainer" parent="MenuMember/VBoxContainer/HBoxContainer/Equip"]
margin_left = -8.0
margin_top = 30.0
margin_right = 20.0
margin_bottom = 84.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Preview" type="TextureRect" parent="MenuMember/VBoxContainer/HBoxContainer/Equip/Card"]
margin_left = 1.0
margin_right = 27.0
margin_bottom = 34.0
size_flags_horizontal = 6
texture = ExtResource( 8 )

[node name="Button" type="Button" parent="MenuMember/VBoxContainer/HBoxContainer/Equip/Card"]
margin_top = 38.0
margin_right = 28.0
margin_bottom = 54.0
size_flags_horizontal = 2
text = "Zeus"

[node name="Card2" type="VBoxContainer" parent="MenuMember/VBoxContainer/HBoxContainer/Equip"]
margin_left = 13.102
margin_top = 30.0
margin_right = 41.102
margin_bottom = 84.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Preview" type="TextureRect" parent="MenuMember/VBoxContainer/HBoxContainer/Equip/Card2"]
margin_left = 1.0
margin_right = 27.0
margin_bottom = 34.0
size_flags_horizontal = 6
texture = ExtResource( 8 )

[node name="Button" type="Button" parent="MenuMember/VBoxContainer/HBoxContainer/Equip/Card2"]
margin_top = 38.0
margin_right = 28.0
margin_bottom = 54.0
size_flags_horizontal = 2
text = "Zeus"

[node name="Card3" type="VBoxContainer" parent="MenuMember/VBoxContainer/HBoxContainer/Equip"]
margin_left = 34.5
margin_top = 30.0
margin_right = 62.5
margin_bottom = 84.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Preview" type="TextureRect" parent="MenuMember/VBoxContainer/HBoxContainer/Equip/Card3"]
margin_left = 1.0
margin_right = 27.0
margin_bottom = 34.0
size_flags_horizontal = 6
texture = ExtResource( 8 )

[node name="Button" type="Button" parent="MenuMember/VBoxContainer/HBoxContainer/Equip/Card3"]
margin_top = 38.0
margin_right = 28.0
margin_bottom = 54.0
size_flags_horizontal = 2
text = "Zeus"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/menumember_open = SubResource( 5 )
anims/menumore_open = SubResource( 2 )
anims/menusmall_open = SubResource( 3 )
